# ide-proxy

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  sample.env
api/: urls.py  views.py
api/authenticators/: jwt.py
api/middlewares/: auth.py
api/mixins/: permissions.py
api/views/auth/: urls.py  views.py
api/views/code/: urls.py  views.py
api/views/judge/: urls.py  views.py
domain/: models.py
domain/services/: authentication.py
exapi/ide_core/: models.py  service.py
exapi/judge/: models.py  service.py
exapi/olympus/: models.py  service.py
ide_proxy/: asgi.py  config.py  settings.py  urls.py  wsgi.py
utils/: error.py  jwt.py  make_error.py  validator.py  views.py
